# chromium

./: .editorconfig  .gitignore  .npmignore  CONTRIBUTING.md  Makefile  README.md  eslint.config.js  incrementVersion  package-lock.json  package.json  prettier.config.ts  tsconfig.build.json  tsconfig.json  tsdown.config.js  tsup.config.js  update-browser-revision.mjs  update_browser_revision.mjs  vitest.config.ts
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: aws.yml  build-chromium.yml  build-complete.yml  build-safety-net.yml  check-chromium-update.yml  check-pr-binaries.yml  prepare-release.yml  release.yml  test-arm.yml  test-x64.yml  test.yml
_/amazon/: template.yml
_/ansible/: Makefile  README.md  ansible.cfg  inventory.ini
_/ec2/: README.md  args-arm64.gn  args-x64.gn  build-arm64-libs.sh  build-arm64.sh  build-chromium.sh  build-x64.sh  revision.txt  setup.sh  teardown.sh
_/ec2/patches/: render-process-host-check.sed  sandbox-ipc-failed-polls.sed
examples/aws-sam/: .gitignore  README.md  template.yaml  template.yml
examples/production-dependency/: index.js  package.json
examples/remote-min-binary/: index.js  package.json
examples/serverless-graviton-with-pack/: index.js  package.json  serverless.yml
examples/serverless-with-lambda-layer/: index.js  serverless.yml
source/: helper.ts  index.ts  lambdafs.ts  paths.cjs.ts  paths.esm.ts
tests/: chromium.test.ts  integration.test.ts
tools/: build.sh  download-open-sans.mjs  update-browser-revision.mjs  visual-regression.mjs
(+18 files in other folders)
