import("//build/args/headless.gn")
blink_symbol_level = 0
dcheck_always_on = false
disable_histogram_support = false
enable_basic_print_dialog = false
enable_keystone_registration_framework = false
enable_linux_installer = false
enable_media_remoting = false
ffmpeg_branding = "Chrome"
is_component_build = false
is_debug = false
is_official_build = true
proprietary_codecs = true
symbol_level = 0
target_os = "linux"
use_sysroot = true
v8_symbol_level = 0
target_cpu="x64"
v8_target_cpu="x64"
